--- a/cover.html
+++ b/cover.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Verport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -16,30 +21,27 @@
     <style>
       body {
         background-image: linear-gradient(
-          to left top,
-          #ffffff,
-          #fcfcff,
-          #f9f8ff,
-          #f6f5ff,
-          #f3f2ff,
-          #f3f2ff,
-          #f3f2ff,
-          #f3f2ff,
-          #f6f5ff,
-          #f9f8ff,
-          #fcfcff,
-          #ffffff
+          to right top,
+          #413c89,
+          #715d9d,
+          #9b82b3,
+          #c0aaca,
+          #e2d4e4
         );
+      }
+      * {
+        list-style: none;
       }
     </style>
   </head>
   <body>
     <!--Header-->
-    <header class="px-3" style="padding-bottom: 113px;">
-      <div class="container">
-        <div
-          class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
-        >
+    <header class="py-3 mb-3 border-bottom" >
+      <div
+        class="container-fluid d-grid gap-3 align-items-center"
+        style="grid-template-columns: 1fr 2fr"
+      >
+        <div class="ps-5">
           <a
             href="/"
             class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none"
@@ -50,29 +52,30 @@
               height="16"
               fill="currentColor"
               class="bi bi-cloud-haze"
-              viewBox="0 0 16 16"
+              VerBox="0 0 16 16"
             >
               <path
                 d="M4 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm2 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM13.405 4.027a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1z"
               />
             </svg>
           </a>
+        </div>
 
-          <ul
-            class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
-          >
-            <li>
-              <a href="./index.html" class="nav-link px-2 link-secondary"
-                >Home</a
-              >
-            </li>
-          </ul>
+        <div class="d-flex align-items-center">
+          <form class="w-100 me-3" role="search">
+            <input
+              type="search"
+              class="form-control"
+              placeholder="Buscar..."
+              aria-label="Search"
+            />
+          </form>
 
-          <div class="dropdown text-end">
+          <div class="flex-shrink-0 dropdown">
             <a
               href="#"
               class="d-block link-dark text-decoration-none dropdown-toggle"
-              id="dropdownUser1"
+              id="dropdownUser2"
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
@@ -82,7 +85,7 @@
                 height="16"
                 fill="currentColor"
                 class="bi bi-person-circle"
-                viewBox="0 0 16 16"
+                VerBox="0 0 16 16"
               >
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
                 <path
@@ -92,8 +95,8 @@
               </svg>
             </a>
             <ul
-              class="dropdown-menu text-small"
-              aria-labelledby="dropdownUser1"
+              class="dropdown-menu text-small shadow"
+              aria-labelledby="dropdownUser2"
             >
               <li><a class="dropdown-item" href="#">Nuevo Proyecto...</a></li>
               <li><a class="dropdown-item" href="#">Ajustes</a></li>
@@ -109,47 +112,23 @@
     <!--/Header-->
 
     <!--Main-->
+    <main class=" text-center" style="padding-top: 80px; padding-bottom: 87px;">
+      <h1 class="pt-5">Repositorio bloqueado.</h1>
+      <p class="lead px-5">
+        Algunos repositorios buscan tener mas privacidad y bloquean su
+        visualizacion a los usuarios que no hacen parte de este, presiona el
+        boton para enviar una peticion de visualizacion.
+      </p>
+      <p class="lead">
+        <a href="/404.html" class="btn btn-lg fw-bold btn-dark">Enviar peticion</a>
+      </p>
+    </main>
 
-    <div class="py-5 px-5 ">
-
-      <div class=" text-center ">
-        <h1 class="display-2 fw-bold lh-1 mb-4 text-testudine">
-          testud!ne
-        </h1>
-      </div>
-
-      <div class="input-group">
-        <input
-          type="search"
-          class="form-control rounded"
-          placeholder="Buscar..."
-          aria-label="Search"
-          aria-describedby="search-addon"
-        />
-        <a href="./find.html">
-        <button type="button" class="btn btn-primary" >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-search"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
-            />
-          </svg>
-       
-        </button>
-      </a>
-      </div>
-    </div>
     <!--/Main-->
 
     <!--Footer-->
 
-    <footer style="padding-top: 115px;">
+    <footer >
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
           <a href="./index.html" class="nav-link px-2 text-muted">Home</a>
