--- a/login.html
+++ b/login.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -26,40 +21,40 @@
   </head>
   <body class="text-center">
 
-    <main class="form-signin  m-auto">
+    <main class="form-signin w-100 py-4 h-100 centerLogin ">
         <div >
-      <form>
+      <form class="mx-5 px-5">
         <a href="/index.html">
         <img
-          class="mb-4"
+          class="mb-1"
           src="./assets/Mi proyecto.png"
-          alt=""
+          alt="Logo"
           width="200"
           height="200"
         />
         </a>
         <h1 class="h3 mb-3 fw-normal">Bienvenido</h1>
 
-        <div class="form-floating">
+        <div class="form-floating mx-5 ">
           <input
             type="email"
-            class="form-control d-grid gap-2 col-6 mx-auto"
+            class="form-control"
             id="floatingInput"
             placeholder="correo@ejemplo.com"
           />
           <label for="floatingInput">Direccion de Email</label>
         </div>
-        <div class="form-floating">
+        <div class="form-floating mx-5">
           <input
             type="password"
-            class="form-control d-grid gap-2 col-6 mx-auto"
+            class="form-control "
             id="floatingPassword"
             placeholder="Password"
           />
           <label for="floatingPassword">Contraseña</label>
         </div>
 
-        <div class="checkbox mb-3">
+        <div class="checkbox mb-3 mt-3">
           <label>
             <input type="checkbox" value="remember-me" /> Recuerdame
           </label>
