--- a/terminos.html
+++ b/terminos.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -103,13 +98,15 @@
 
       <!--Main-->
 
+      <main class="mx-5">
+
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5 ">
         <div class="col-10 col-sm-8 col-lg-6">
           <img src="/assets/S2_Conversation at Office.jpg" class="d-block mx-lg-auto img-fluid" alt="Imagen terminos" width="700" height="500" loading="lazy" style="border-radius: 50px">
         </div>
         <div class="col-lg-6">
-          <h1 class="display-5 fw-bold lh-1 mb-3">Terminos y condiciones</h1>
-          <p class="lead">Al hacer uso de esta página web, el visitante y/o usuario declara haber leído y estar de acuerdo con todos los Términos y Condiciones aquí contenidos. Por favor, lea cuidadosamente este documento, ya que de éste tanto el visitante como el usuario registrado, adquieren derechos y obligaciones.
+          <h1 class="display-5  lh-1 mb-3">Terminos y condiciones</h1>
+          <p class="lead fs-5">Al hacer uso de esta página web, el visitante y/o usuario declara haber leído y estar de acuerdo con todos los Términos y Condiciones aquí contenidos. Por favor, lea cuidadosamente este documento, ya que de éste tanto el visitante como el usuario registrado, adquieren derechos y obligaciones.
 
             El presente documento contiene los Términos y Condiciones de la página www.testudine.co, propiedad de testudine.tech, los cuales son aceptados por el visitante y/o usuario registrado (en adelante usuario) de la misma. Para llevar a cabo la compra de los productos y/o servicios anunciados en esta página web, el visitante o usuario deberá ser mayor de edad, registrarse diligenciando el formulario que se dispone para ello, comprometiéndose a suministrar toda la información requerida, y cumplir y respetar todos los Términos y Condiciones establecidos en esta página web y en la Ley Colombiana vigente.</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -119,6 +116,7 @@
           </div>
         </div>
       </div>
+    </main>
 
       
        <!--/Main-->
